<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textSize="18sp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:layout_above="@+id/bottomBar" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnCreateNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create Note"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnDeleteNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete Note"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSelectedNoteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note Name:"
        android:textSize="18sp"
        android:background="@color/yellowBackgroundColor"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewSelectedNoteContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note Content:"
        android:textSize="18sp"
        android:layout_below="@+id/textViewSelectedNoteName"
        android:background="@color/yellowBackgroundColor"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"/>

</RelativeLayout>
