<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSelectNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Note:"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/spinnerNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSelectNote"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:layout_below="@+id/spinnerNotes"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
</RelativeLayout>
